improved demo mode and small bug fixes
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@15962 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd